# Biochar-simulator

./: .gitignore  .mcp.json  .readthedocs.yaml  BATCH_GENERATION_GUIDE.md  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  GROMACS_WORKFLOW.md  HYDROGEN_PLACEMENT_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEEDED_UPDATES.md  README.md  RELEASE_SUMMARY.md  UPDATES_v1.1.md  VALENCE_COMPLETION_REPORT.md  VALENCE_IMPROVEMENTS_SUMMARY.md  VALENCE_SYSTEM.md  pyproject.toml  requirements.txt  test_valence_comprehensive.py  test_valence_update.py
.claude/: agent-memory-protocol.md  settings.json
.claude/agents/: biochar-scientific-advisor.md  code-reviewer.md  gromacs-md-pipeline.md
.github/workflows/: ci.yml  publish.yml
biochar/: __init__.py  biochar_generator.py  carbon_skeleton.py  cli.py  condensation.py  condensation_cli.py  constants.py  geometry_3d.py  gromacs_export.py  heteroatom_assignment.py  md_setup.py  md_setup_cli.py  ml_charges.py  opls_typing.py  protonation.py  qm_charges.py  surface_builder.py  sweep.py  sweep_cli.py  temperature_model.py  valence.py  validation.py
biochar/data/: charges_gpr_cm5.pkl  davis-biochar-db.csv  temperature_model.json
biochar_simulator/: geometry_3d.py
conda-recipe/: meta.yaml
docs/: Makefile  changelog.rst  conf.py  environment.yml  index.rst  installation.rst  qm-charge-backend.md  quickstart.rst
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/.doctrees/__intersphinx_cache__/: rdkit_objects.inv
docs/_build/html/.doctrees/api/: biochar_generator.doctree  constants.doctree  gromacs_export.doctree  opls_typing.doctree  surface_builder.doctree
docs/_build/html/.doctrees/user_guide/: batch_generation.doctree  functional_groups.doctree  gromacs_workflow.doctree  single_molecule.doctree  surfaces.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/biochar/: biochar_generator.html  constants.html  gromacs_export.html  opls_typing.html  surface_builder.html
docs/_build/html/_sources/: changelog.rst.txt  index.rst.txt  quickstart.rst.txt
docs/_build/html/api/: biochar_generator.html  constants.html  gromacs_export.html  opls_typing.html  surface_builder.html
docs/_build/html/user_guide/: batch_generation.html  functional_groups.html  gromacs_workflow.html  single_molecule.html  surfaces.html
docs/api/: constants.rst  gromacs_export.rst  opls_typing.rst  temperature_model.rst
docs/examples/: visualization_demo.ipynb
docs/plans/: 2026-07-16-001-feat-ph-dependent-protonation-plan.md  2026-07-17-001-fix-nc-ca-oh-pyridinic-angle-plan.md
docs/solutions/bugs/: physical-features-misread-as-geometry-errors.md
docs/solutions/conventions/: verify-opls-types-against-real-forcefield.md  xfail-strict-as-deferred-gap-tripwire.md
docs/solutions/workflow-issues/: stacked-pr-ci-and-base-branch-traps.md
docs/user_guide/: batch_generation.rst  functional_groups.rst  gromacs_workflow.rst  single_molecule.rst  surfaces.rst
examples/: batch_generation.py  example_usage.py  hardwood_400C_series.ipynb  plot_analysis.py
examples/sweeps/: oxygen_group_grid.yaml  temperature_grid.yaml
plans/: issue-backlog-2026-06-09.md  issue-status-2026-06-13.md  issue-status-2026-06-20.md  issue-status-2026-06-26.md  issue-status-2026-07-07.md  issue-status-2026-07-10.md  split-pfas-workflow.md  temperature_model_plan.md  wood-condensation-pipeline.md
src/: __init__.py  biochar_generator.py  carbon_skeleton.py  constants.py  geometry_3d.py  gromacs_export.py  heteroatom_assignment.py  surface_builder.py  valence.py  validation.py
tests/: test_aliphatic_oxygen.py  test_bond_length_validation.py  test_charge_neutrality.py  test_clash_tolerance.py  test_cli.py  test_condensation.py  test_constants_ff.py  test_coverage_gaps.py  test_generator.py  test_gromacs_export.py  test_hbond_clash.py  test_hc_control.py  test_md_setup.py  test_ml_charges.py  test_opls_type_map.py  test_opls_typing_ionized.py  test_pah_quality.py  test_ph_integration.py  test_protonation.py  test_qm_charges.py  test_surface_builder.py  test_sweep.py  test_temperature_model.py  test_valence.py  test_validation_extended.py
tests/results/: test_report.txt
(+20 files in other folders)
