[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "biochar-simulator"
version = "0.1.0"
description = "Generate biochar molecular structures for GROMACS MD simulations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["biochar", "molecular-dynamics", "gromacs", "PAH", "force-field", "OPLS-AA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.1",
    # rdkit is listed here for PyPI; conda users should install via conda-forge
    "rdkit>=2023.9.1",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "pandas>=1.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/jolayfield/Biochar-simulator"
Repository = "https://github.com/jolayfield/Biochar-simulator"
"Bug Tracker" = "https://github.com/jolayfield/Biochar-simulator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]
