[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biochar"
version = "0.2.0"
description = "Generate biochar molecular structures for GROMACS MD simulations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["biochar", "molecular-dynamics", "gromacs", "PAH", "force-field", "OPLS-AA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.1",
    # rdkit is listed here for PyPI; conda users should install via conda-forge
    "rdkit>=2023.9.1",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "pandas>=1.5.0",
]
ml = [
    "scikit-learn>=1.3",
]
# The 'qm' charge backend (LigParGen-style 1.14*CM1A) shells out to an external
# MOPAC binary, which is NOT installable from PyPI. Install MOPAC separately:
#   conda install -c conda-forge mopac
# or from https://github.com/openmopac/mopac. This extra carries no Python
# dependencies of its own; it exists as a discoverable marker so that
# `pip install biochar[qm]` succeeds and documents the requirement. The backend
# discovers `mopac` on PATH at run time (override with $MOPAC_CMD).
qm = []
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "nbsphinx",
    "nbconvert",
]

[project.scripts]
biochar-gen = "biochar.cli:main"

[project.urls]
Homepage = "https://github.com/jolayfield/Biochar-simulator"
Repository = "https://github.com/jolayfield/Biochar-simulator"
"Bug Tracker" = "https://github.com/jolayfield/Biochar-simulator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["biochar*"]

[tool.setuptools.package-data]
biochar = ["data/*.pkl", "data/*.json", "data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["biochar"]
omit = ["tests/*", "examples/*"]
